--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: patchania@googlemail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Finding my way...
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://plechat1.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: pigeance
 github_username:  plechat1
 
